fix chat scrollbar hide if not needed

--- a/css/radio.css
+++ b/css/radio.css
@@ -329,6 +329,7 @@ Chat
     left: 0;
     height: 100%;
     width: 100%;
+    overflow-y: auto;
 }
 
 .messages .message {
